<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:orientation="vertical"
	android:weightSum="100" android:layout_height="fill_parent"
	android:gravity="top|center_vertical">
	<!-- PlayerName -->
	<LinearLayout 
	android:layout_weight="15" android:layout_width="fill_parent"
		android:layout_height="0px" android:orientation="horizontal"
		android:weightSum="100" android:padding="5dip">
		<TextView android:id="@+id/PlayerNameTv"
			android:layout_width="wrap_content" android:layout_weight="30"
			android:layout_height="wrap_content" android:text="@string/pName"
			android:textSize="18sp">
		</TextView>
		<EditText android:id="@+id/PlayerNameEt"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/pNameDefVal" android:layout_weight="70"
			android:textSize="18sp" android:maxLength="20">
		</EditText>
	</LinearLayout>
	<!-- Difficulty -->
	<LinearLayout 
	android:layout_weight="45" android:layout_width="fill_parent"
		android:layout_height="0px" android:orientation="horizontal"
		android:padding="5dip">
		<RadioGroup android:id="@+id/difficultyRG"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<TextView android:text="@string/startNewGameDialogDifficultyDesc"
			android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="18sp"/>
			
			<RadioButton android:id="@+id/DifficultyEasy"
				android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/startNewGameDialogDifficultyEasy" >
			</RadioButton>
			<RadioButton android:id="@+id/DifficultyNormal"
				android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/startNewGameDialogDifficultyNormal" android:checked="true">
			</RadioButton>
			<RadioButton android:id="@+id/DifficultyHard"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/startNewGameDialogDifficultyHard">
			</RadioButton>
		</RadioGroup>
	</LinearLayout>

	<!-- Game Exists -->
	<LinearLayout 
	android:layout_weight="28" android:layout_width="fill_parent"
		android:layout_height="0px" android:orientation="horizontal"
		android:padding="5dip"
		>

		<TextView android:id="@+id/GameExistsTv"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="18sp" android:textStyle="bold" android:textColor="#ff0000"
			android:text="testing 123testing 123testing 123testing 123testing 123testing 123testing 123testing 123">
		</TextView>

	</LinearLayout>

	<!-- OK\Cancel Buttons -->
	<LinearLayout 
	android:layout_weight="12" android:layout_width="fill_parent"
		android:layout_height="0px" 
		android:gravity="center_horizontal|bottom" android:paddingTop="2px"
		android:layout_gravity="bottom"
		android:weightSum="100">
		<Button android:id="@+id/startNewGameDialogOkButton"
			android:layout_height="wrap_content"
			android:layout_width="0px"
			android:text="@string/startNewGameDialogOkMsg" 
			android:layout_weight="50"/>
		<Button android:id="@+id/startNewGameDialogCancelButton"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:layout_width="0px"
			android:text="@string/startNewGameDialogCancelMsg" />
	</LinearLayout>
</LinearLayout>
