<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ScrollView android:id="@+id/aboutscrollview"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<TextView android:text="@string/ChangelogHeading1"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:layout_gravity="center_vertical"
				android:textColor="#ffffff" />
			<TextView android:text="@string/ChangelogHeading2" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingTop="15px"
				android:paddingLeft="15px" android:textStyle="bold"
				android:textColor="#ffffff" />
			<TextView android:text="@string/ChangelogRevisionNumber"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="15px" android:paddingBottom="10px"
				android:textColor="#ffffff" />
			<TextView android:text="@string/ChangelogRevisionDetails"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="12px" android:paddingBottom="10px"
				android:textColor="#ffffff" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
