<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:weightSum="100" android:orientation="vertical" android:id="@+id/table"
	android:background="#ffffff">
	<!-- Top marquee -->
	<LinearLayout android:background="#000000"
		android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="6.0"
		android:id="@+id/heading">
		<TextView android:id="@+id/headingText" android:text="@string/Heading"
			android:textColor="#ffffff" android:layout_height="fill_parent"
			android:layout_width="fill_parent" android:ellipsize="marquee"
			android:singleLine="true" android:scrollHorizontally="true"
			android:marqueeRepeatLimit="marquee_forever" android:focusable="true"
			android:focusableInTouchMode="true" android:padding="4dip" />
	</LinearLayout>

	<!-- Table Container -->
	<LinearLayout android:background="@drawable/risingtree"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:layout_weight="94.0" android:weightSum="100.0" android:layout_width="fill_parent">

		<!-- Top Opponent -->
		<LinearLayout android:id="@+id/topRow"
			android:background="#ff0000" android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="15.">
			<TextView android:id="@+id/o2Name" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/Opponent2"
				android:gravity="center_horizontal" />
			<ImageView android:id="@+id/o2c1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center">
			</ImageView>
			<ImageView android:id="@+id/o2c2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center">
			</ImageView>
			<ImageView android:id="@+id/o2c3" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center">
			</ImageView>
			<ImageView android:id="@+id/o2c4" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center">
			</ImageView>
			<ImageView android:id="@+id/o2c5" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center">
			</ImageView>
		</LinearLayout>

		<!-- Mid-section -->
		<LinearLayout android:background="#00ff00"
			android:layout_width="fill_parent" android:orientation="horizontal"
			android:weightSum="100" android:layout_height="0px" android:layout_weight="65">
			<!-- left opponent -->
			<LinearLayout android:id="@+id/leftCol"
				android:orientation="vertical" android:background="#ffffff"
				android:layout_height="fill_parent" android:layout_weight="17.5" android:layout_width="0px">
				<TextView android:id="@+id/o1Name" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/Opponent1"
					android:layout_gravity="left" />

				<ImageView android:id="@+id/o1c1" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>
				<ImageView android:id="@+id/o1c2" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>
				<ImageView android:id="@+id/o1c3" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>
				<ImageView android:id="@+id/o1c4" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>
				<ImageView android:id="@+id/o1c5" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>


			</LinearLayout>
			<!-- Deck and discarded -->
			<LinearLayout android:id="@+id/center"
				android:background="#00cccc" android:layout_height="fill_parent"
				android:orientation="vertical" android:layout_weight="65" android:layout_width="0px">
				<ImageView android:id="@+id/deck" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:src="@drawable/deck"
					android:paddingRight="15px" />


				<LinearLayout android:id="@+id/cardsThrown"
					android:layout_toRightOf="@+id/deck" android:layout_height="96px"
					android:layout_width="130px">

					<ImageView android:layout_width="72px"
						android:layout_height="96px" android:id="@+id/card5" />
					<ImageView android:layout_width="72px"
						android:layout_height="96px" android:id="@+id/card4"
						android:layout_marginLeft="-60px" />
					<ImageView android:layout_width="72px"
						android:layout_height="96px" android:id="@+id/card3"
						android:layout_marginLeft="-60px" />
					<ImageView android:layout_width="72px"
						android:layout_height="96px" android:id="@+id/card2"
						android:layout_marginLeft="-60px" />
					<ImageView android:layout_width="72px"
						android:layout_height="96px" android:id="@+id/card1"
						android:layout_marginLeft="-60px" />


				</LinearLayout>

			</LinearLayout>
			<!-- right opponent -->
			<LinearLayout android:id="@+id/rightCol"
				android:orientation="vertical" android:background="#000000"
				android:layout_height="fill_parent" android:layout_weight="17.5" android:layout_width="0px">
				<TextView android:id="@+id/o3Name" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/Opponent3"
					android:layout_gravity="right" />
				<ImageView android:id="@+id/o3c1" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>
				<ImageView android:id="@+id/o3c2" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>
				<ImageView android:id="@+id/o3c3" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>
				<ImageView android:id="@+id/o3c4" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>
				<ImageView android:id="@+id/o3c5" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				</ImageView>
			</LinearLayout>
		</LinearLayout>

		<!-- Bottom Player -->
		<LinearLayout android:id="@+id/bottom"
			android:background="#0000ff" android:layout_width="fill_parent" android:orientation="vertical"
			android:weightSum="100" android:layout_weight="20" android:layout_height="0px">
			<TextView android:id="@+id/p1Name" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/Player"
				android:layout_gravity="left|center_vertical" android:background="#00ff00"
				android:layout_weight="7" />

			<!-- review this content -->
			<TableLayout android:id="@+id/p1CardsAndActionButtonContainer"
				android:orientation="horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="93">
				<TableRow android:layout_height="wrap_content">
					<LinearLayout android:id="@+id/p1cardscontainer"
						android:layout_width="wrap_content" android:layout_gravity="left"
						android:gravity="left" android:layout_height="70px">

						<ImageView android:id="@+id/p1c1" android:layout_height="@dimen/cardHeight"
							android:layout_width="@dimen/cardWidth" android:layout_gravity="bottom"
							android:layout_marginBottom="0px">
						</ImageView>
						<ImageView android:id="@+id/p1c2" android:layout_height="@dimen/cardHeight"
							android:layout_width="@dimen/cardWidth" android:layout_gravity="bottom"
							android:layout_marginBottom="0px">
						</ImageView>
						<ImageView android:id="@+id/p1c3" android:layout_height="@dimen/cardHeight"
							android:layout_width="@dimen/cardWidth" android:layout_gravity="bottom"
							android:layout_marginBottom="10px">
						</ImageView>
						<ImageView android:id="@+id/p1c4" android:layout_height="@dimen/cardHeight"
							android:layout_width="@dimen/cardWidth" android:layout_gravity="bottom"
							android:layout_marginBottom="0px">
						</ImageView>
						<ImageView android:id="@+id/p1c5" android:layout_height="@dimen/cardHeight"
							android:layout_width="@dimen/cardWidth" android:layout_gravity="bottom"
							android:layout_marginBottom="10px">
						</ImageView>

					</LinearLayout>
					<LinearLayout android:id="@+id/ActionButtonContainer"
						android:clipChildren="true"
						android:gravity="right" android:layout_gravity="right"
						android:layout_width="75px" android:orientation="vertical" android:layout_height="fill_parent">

						<Button android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:text="@string/PerformYaniv"
							android:id="@+id/PerformYaniv" android:clickable="true"
							android:gravity="center" android:textScaleX="1"
							android:layout_gravity="center">
						</Button>
						<Button android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:clickable="true"
							android:textScaleX="1" android:gravity="center" android:id="@+id/NextPlayer"
							android:text="@string/NextPlayer" android:layout_gravity="center"></Button>
					</LinearLayout>
				</TableRow>
			</TableLayout>
			<!-- -->
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
